# MemoPad

./: .gitignore  CMakeLists.txt  Changelog.md  LICENSE.md  README.md
src/: CMakeLists.txt  main.cpp
src/models/: canvas.cpp  canvas.h  card.cpp  card.h  cardmanager.cpp  cardmanager.h  command.cpp  command.h  commandmanager.cpp  commandmanager.h  commands.h  preferencesmanager.cpp  preferencesmanager.h  texteditor.cpp  texteditor.h
src/ui/: BackgroundCanvas.qml  Canvas.qml  CanvasBoard.qml  CanvasCard.qml  CardCreator.js  CardEditBar.qml  CardEditBarItem.qml  CardLayer.qml  CardPalette.qml  EdgeLayer.qml  FloatingBar.qml  FloatingBarArea.qml  FloatingBarItem.qml  FloatingButton.qml  Globals.qml  IO.js  IconSet.qml  ImageCard.qml  ImageCardEditBar.qml  MShortCut.qml  Main.qml  NodeLayer.qml  NoteCard.qml  PreferencesPopup.qml  ResizableItem.qml  SideToolBar.qml  SideToolBarArea.qml  SideToolBarItem.qml  Snap.js  TextEditor.qml  preferencesPage1.qml  preferencesPage2.qml
src/ui/assets/icon/: MemoPad.rc
src/ui/cards/: CanvasCard.qml  ImageCard.qml  NoteCard.qml  ResizableItem.qml
src/ui/cards/decos/: CardEditBar.qml  CardPalette.qml
src/ui/custom-components/: CustomButton.qml  CustomComboBox.qml  LayoutSpacer.qml  SearchableComboBox.qml
src/ui/edges/: Arrow.qml
src/ui/edges/decos/: ArrowEditBar.qml  ArrowEditBarItem.qml
src/ui/js/: CardCreator.js  IO.js
src/ui/nodes/: CanvasCard.qml  ImageCard.qml  NoteCard.qml  ResizableItem.qml
src/ui/nodes/decos/: ArrowDropArea.qml  CardEditBar.qml  CardPalette.qml  ImageCardEditBar.qml
src/ui/overlay/: CanvasPalette.qml  FloatingBar.qml  FloatingBarArea.qml  FloatingBarItem.qml  FloatingButton.qml  Overlay.qml
src/ui/preferences-popup/: PreferencesPopup.qml  pageAbout.qml  pageAppearance.qml  pageCommon.qml  preferencesPage1.qml  preferencesPage2.qml
src/ui/sidebar/: FloatingBar.qml  FloatingBarItem.qml  FloatingButton.qml
src/ui/style/: Style.qml
src/utils/: preferencesmanager.cpp  preferencesmanager.h  qsettingsjson.cpp  qsettingsjson.h
